# RayTracerJamesChalmers

./: AmbientLightSource.cpp  AmbientLightSource.h  CMakeLists.txt  Camera.cpp  Camera.h  Colour.cpp  Cube.cpp  Cube.h  Cylinder.cpp  Cylinder.h  DirectionalLightSource.cpp  DirectionalLightSource.h  Doxyfile  ImageDisplay.cpp  ImageDisplay.h  LightSource.cpp  LightSource.h  Material.h  Matrix.h  Normal.h  Object.cpp  Object.h  Plane.cpp  Plane.h  Point.h  PointLightSource.cpp  PointLightSource.h  README.md  Scene.cpp  Scene.h  SceneReader.cpp  SceneReader.h  Sphere.cpp  Sphere.h  SpotLightSource.cpp  SpotLightSource.h  Vector.h  rayTracerMain.cpp  utility.h
testScenes/: assignmentSampleScene2.txt  cubeTest1.txt  cubeTest2.txt  cubeTest3.txt  cylinderTest1.txt  directionalTest1.txt  lightTest1.txt  lightTest2.txt  lightTest3.txt  lightTest4.txt  lightTest5.txt  mirrorTest1.txt  mirrorTest2.txt  mirrorTest3.txt  mirrorTest4.txt  mirrorTest5.txt  mirrorTest6.txt  planeTest1.txt  planeTest2.txt  sampleScene.txt  snowman.txt  spotLightTest1.txt  spotLightTest2.txt
untitled folder/: Ray Tracer Report James Chalmers.docx  assignmentSampleScene.txt
